Update symbols files for 375.82. It seems all the i386-only symbols leftovers in the GLVND libraries have been removed.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7336 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,7 @@ nvidia-graphics-drivers (375.82-1~git1) UNRELEASED; urgency=medium
 
   [ Luca Boccassi ]
   * Add support for buster/sid in nvidia-detect.  (Closes: #866126)
+  * Update symbols files.
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 16 Jul 2017 15:14:34 +0200
 
