--- a/debian/changelog
+++ b/debian/changelog
@@ -36,6 +36,8 @@ nvidia-graphics-drivers (384.59-1~svn1) UNRELEASED; urgency=medium
   [ Andreas Beckmann ]
   * Rename libnvidia-ptxjitcompiler to libnvidia-ptxjitcompiler1, this library
     gained a stable SONAME.
+  * Update lintian overrides.
+  * Upload to experimental.
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Thu, 29 Jun 2017 18:50:02 +0100
 
