--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,7 @@ nvidia-graphics-drivers (384.59-1~svn1) UNRELEASED; urgency=medium
   * Add nvidia-vulkan-nonglvnd-common to ship the non-GLVND Vulkan ICD file.
 
   [ Andreas Beckmann ]
+  * Add nvidia-nonglvnd-vulkan-icd
   * Rename libnvidia-ptxjitcompiler to libnvidia-ptxjitcompiler1, this library
     gained a stable SONAME.
   * Update lintian overrides.
