--- a/debian/changelog
+++ b/debian/changelog
@@ -31,10 +31,10 @@ nvidia-graphics-drivers (384.59-1~svn1) UNRELEASED; urgency=medium
   * Refresh man-fixes-nvidia-smi.patch for 384.47.
   * Update nv-readme.ids.
   * Update symbols files.
-  * Add nvidia-vulkan-nonglvnd-common to ship the non-GLVND Vulkan ICD file.
 
   [ Andreas Beckmann ]
-  * Add nvidia-nonglvnd-vulkan-icd
+  * Add nvidia-nonglvnd-vulkan-icd and nvidia-nonglvnd-vulkan-common for the
+    non-GLVND variant of Vulkan support.  (Closes: #864477)
   * Rename libnvidia-ptxjitcompiler to libnvidia-ptxjitcompiler1, this library
     gained a stable SONAME.
   * Update lintian overrides.
