--- a/debian/changelog
+++ b/debian/changelog
@@ -41,6 +41,8 @@ nvidia-graphics-drivers (381.22-1~svn1) UNRELEASED; urgency=medium
   [ Andreas Beckmann ]
   * Merge changes from 375.82-1.
   * Bump libvulkan1 dependency to (>= 1.0.42).
+  * Add nvidia-nonglvnd-vulkan-icd and nvidia-nonglvnd-vulkan-common for the
+    non-GLVND variant of Vulkan support.  (Closes: #864477)
   * Restrict watch file to releases from the 381.xx short lived branch.
   * Update lintian overrides.
   * Upload to experimental.
