--- a/debian/changelog
+++ b/debian/changelog
@@ -37,6 +37,8 @@ nvidia-graphics-drivers (384.59-1~svn1) UNRELEASED; urgency=medium
     non-GLVND variant of Vulkan support.  (Closes: #864477)
   * Rename libnvidia-ptxjitcompiler to libnvidia-ptxjitcompiler1, this library
     gained a stable SONAME.
+  * build-module-packages.sh: Skip PREEMPT_RT (*-rt-*) kernels, unsupported
+    upstream.
   * Update lintian overrides.
   * Upload to experimental.
 
