--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (375.82-1~deb9u1) stretch; urgency=medium
+
+  * Rebuild for stretch.
+
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 09 Aug 2017 05:03:52 +0200
+
 nvidia-graphics-drivers (375.82-1) unstable; urgency=high
 
   * New upstream long lived branch release 375.82 (2017-07-24).
