--- a/debian/changelog
+++ b/debian/changelog
@@ -1,17 +1,16 @@
-nvidia-graphics-drivers (378.13-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (378.13-2) experimental; urgency=medium
 
   [ Andreas Beckmann ]
   * Merge changes from 375.82-1.
-  * Add fatal-signal.patch to fix kernel module build on
-    Linux 4.11 and newer.  (Closes: #870677)
-  * Add set-memory.patch to fix kernel module build on Linux 4.12 and newer.
 
   [ Luca Boccassi ]
+  * Add fatal-signal.patch to fix kernel module build on Linux 4.11 and newer.
   * Add kref-refcount.patch, drm-encoder.patch, drm-unload.patch,
     drm-helper-mode.patch and drm-vma-fault.patch to fix kernel module build
-    on Linux 4.11 and newer.
+    on Linux 4.11 and newer.  (Closes: #870677)
+  * Add set-memory.patch to fix kernel module build on Linux 4.12 and newer.
 
- -- Andreas Beckmann <anbe@debian.org>  Thu, 15 Jun 2017 14:13:00 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Thu, 10 Aug 2017 19:09:08 +0200
 
 nvidia-graphics-drivers (378.13-1) experimental; urgency=medium
 
