--- a/debian/changelog
+++ b/debian/changelog
@@ -44,6 +44,8 @@ nvidia-graphics-drivers (381.22-1~svn1) UNRELEASED; urgency=medium
     non-GLVND variant of Vulkan support.  (Closes: #864477)
   * Use nvidia_icd.json as the template to generate the non-GLVND variant.
   * Rename libgldispatch0-nvidia to libglvnd0-nvidia, matching libglvnd0.
+  * GLVND stub libs: Conflicts/Replaces/Provides the libglvnd package names.
+  * Use libglvnd libraries as preferred alternative dependencies.
   * Restrict watch file to releases from the 381.xx short lived branch.
   * Update lintian overrides.
   * Upload to experimental.
