--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ nvidia-graphics-drivers (304.135-1~svn4deb9stretch) UNRELEASED; urgency=medium
     (375.82-1).
   * Bump Standards-Version to 4.0.1. No changes needed.
   * nvidia-alternative: Explicitly use interest-await triggers.
+  * Switch from dh_install --list-missing to dh_missing.
 
  -- Andreas Beckmann <anbe@debian.org>  Thu, 15 Dec 2016 02:42:52 +0100
 
