Remove myself from Uploaders
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7427 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,9 @@ nvidia-graphics-drivers (375.82-2) UNRELEASED; urgency=medium
   * README.source: Add pointer to the wiki for for instructions to build
     latest packages from SVN.
 
+  [ Russ Allbery ]
+  * Remove myself from Uploaders.
+
  -- Andreas Beckmann <anbe@debian.org>  Fri, 18 Aug 2017 12:33:53 +0200
 
 nvidia-graphics-drivers (375.82-1~deb9u1) stretch; urgency=medium
