--- a/debian/changelog
+++ b/debian/changelog
@@ -74,6 +74,9 @@ nvidia-graphics-drivers (304.135-1~svn4deb7wheezy) UNRELEASED; urgency=medium
     (Closes: #865964)
   * Add pud-offset.patch to fix kernel module build on Linux 4.12 and newer.
 
+  [ Russ Allbery ]
+  * Remove myself from Uploaders.
+
  -- Andreas Beckmann <anbe@debian.org>  Thu, 15 Dec 2016 02:42:52 +0100
 
 nvidia-graphics-drivers (304.135-1) UNRELEASED; urgency=medium
