--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,8 @@ nvidia-graphics-drivers (375.82-2) UNRELEASED; urgency=medium
     non-GLVND variant of Vulkan support.  (Closes: #864477)
   * Use nvidia_icd.json as the template to generate the non-GLVND variant.
   * Rename libgldispatch0-nvidia to libglvnd0-nvidia, matching libglvnd0.
+  * Use libglvnd libraries as preferred alternative dependencies.
+  * GLVND stub libs: Conflicts/Replaces the corresponding libglvnd packages.
 
   [ Luca Boccassi ]
   * README.source: Add pointer to the wiki for instructions to build latest
