--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (375.82-3) UNRELEASED; urgency=medium
+
+  * nvidia-legacy-check: Fix debconf errors if more than one legacy NVIDIA
+    device is present.  (Closes: #869817, #864406, #812595)
+
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 08 Sep 2017 00:22:25 +0200
+
 nvidia-graphics-drivers (375.82-2) unstable; urgency=medium
 
   [ Andreas Beckmann ]
