--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nvidia-graphics-drivers (381.22-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (381.22-2) experimental; urgency=medium
 
   * Merge changes from 375.82-3.
 
- -- Andreas Beckmann <anbe@debian.org>  Sat, 09 Sep 2017 03:07:11 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Sat, 09 Sep 2017 10:42:08 +0200
 
 nvidia-graphics-drivers (381.22-1) experimental; urgency=medium
 
