--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (384.69-1~svn1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (384.69-1) experimental; urgency=medium
 
   * New upstream long lived branch release 384.69 (2017-08-22).
     - Fixed an intermittent hang when using Vulkan to present directly to
@@ -46,7 +46,7 @@ nvidia-graphics-drivers (384.69-1~svn1) UNRELEASED; urgency=medium
   * Update lintian overrides.
   * Upload to experimental.
 
- -- Luca Boccassi <bluca@debian.org>  Thu, 29 Jun 2017 18:50:02 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Sat, 09 Sep 2017 13:14:08 +0200
 
 nvidia-graphics-drivers (381.22-2) experimental; urgency=medium
 
