--- a/debian/changelog
+++ b/debian/changelog
@@ -74,6 +74,9 @@ nvidia-graphics-drivers (304.135-1~svn4deb7wheezy) UNRELEASED; urgency=medium
   * Add drm-unload.patch to fix kernel module build on Linux 4.11 and newer.
     (Closes: #865964)
   * Add pud-offset.patch to fix kernel module build on Linux 4.12 and newer.
+  * Update pud-offset.patch to fix runtime error on Linux 4.12 and newer.
+    Original patch: https://bugzilla.rpmfusion.org/show_bug.cgi?id=4629#c11
+    (Closes: #875425)
 
   [ Russ Allbery ]
   * Remove myself from Uploaders.
