mention the sid version for more changes
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304@7474 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -59,7 +59,7 @@ nvidia-graphics-drivers (304.135-1~svn4deb7wheezy) UNRELEASED; urgency=medium
   * Switch watch URL from ftp:// to https:// (375.82-1).
   * Bump Standards-Version to 3.9.8. No changes needed.
   * Update lintian overrides.
-  * build-module-packages.sh: Order kernels by descending version.
+  * build-module-packages.sh: Order kernels by descending version (375.82-2).
 
   [ Luca Boccassi ]
   * Switch to my debian.org email address in Uploaders.
