prevent mixing libgl1-nvidia-glx with libgl1-nvidia-glvnd-glx
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7480 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (375.82-4) UNRELEASED; urgency=medium
+
+  * Prevent mixing libgl1-nvidia-glx with libgl1-nvidia-glvnd-glx.
+    (Closes: #875683)
+
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 13 Sep 2017 22:36:56 +0200
+
 nvidia-graphics-drivers (375.82-3) unstable; urgency=medium
 
   * nvidia-legacy-check: Fix debconf errors if more than one legacy NVIDIA
