try to be compatible with virtual packages from src:mesa (<< 17)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@7481 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ nvidia-graphics-drivers (375.82-4) UNRELEASED; urgency=medium
 
   * Prevent mixing libgl1-nvidia-glx with libgl1-nvidia-glvnd-glx.
     (Closes: #875683)
+  * Make relationships with packages from src:libglvnd versioned s.t. they
+    cannot be satisfied by virtual packages provided from src:mesa.
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 13 Sep 2017 22:36:56 +0200
 
