--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,12 @@
 nvidia-graphics-drivers (375.82-4) UNRELEASED; urgency=medium
 
   * Prevent mixing libgl1-nvidia-glx with libgl1-nvidia-glvnd-glx.
-    (Closes: #875683)
-  * Make relationships with packages from src:libglvnd versioned s.t. they
-    cannot be satisfied by virtual packages provided from src:mesa.
+  * Use versioned Provides/Breaks/Replaces on the packages also built from
+    src:libglvnd s.t. they cannot be satisfied by virtual packages provided
+    from src:mesa (<< 17).  (Closes: #875683, #876100)
+  * Do not yet provide the libglvnd package names that were also virtual
+    packages in mesa (for compatibility with mesa (<< 17) still in testing).
+  * Update lintian overrides.
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 13 Sep 2017 22:36:56 +0200
 
