--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,6 @@
-nvidia-graphics-drivers (340.102-2~svn4deb8jessie) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (340.104-1~svn4deb8jessie) UNRELEASED; urgency=medium
+
+  * New upstream legacy 340xx branch release 340.104 (2017-09-19).
 
   [ Andreas Beckmann ]
   * build-module-packages.sh: Order kernels by descending version (375.82-2).
