Drop patches for changes fixed upstream in 304.104
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/340@7489 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,9 @@ nvidia-graphics-drivers (340.104-1~svn4deb8jessie) UNRELEASED; urgency=medium
   * Add fatal-signal.patch and vm-fault.patch to fix kernel module build on
     Linux 4.11 and newer.
   * Add set-memory.patch to fix kernel module build on Linux 4.12 and newer.
+  * Drop drm-driver-legacy.patch, deprecated-cpu-events.patch,
+    vmf-address.patch, drm-unload.patch, fatal-signal.patch and
+    set-memory.patch, fixed upstream.
 
   [ Russ Allbery ]
   * Remove myself from Uploaders.
