--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ nvidia-graphics-drivers (340.104-1~svn4deb8jessie) UNRELEASED; urgency=medium
   * Drop drm-driver-legacy.patch, deprecated-cpu-events.patch,
     vmf-address.patch, drm-unload.patch, fatal-signal.patch and
     set-memory.patch, fixed upstream.
+  * Refresh vm-fault.patch to remove fuzz from upstream changes.
 
   [ Russ Allbery ]
   * Remove myself from Uploaders.
