--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,27 @@
+nvidia-graphics-drivers (384.90-1~svn1) UNRELEASED; urgency=medium
+
+  * New upstream long lived branch release 384.90 (2017-09-21).
+    * Fixed CVE-2017-6266, CVE-2017-6267, CVE-2017-6272. (Closes: #876414)
+    - Fixed a regression that caused display flickering at lower PowerMizer
+      performance levels on some GPUs.
+    - Fixed a regression that prevented console restoration after a VT switch
+      on some GPUs.
+    - Fixed a bug that could cause a system hang when resuming from suspend
+      with some GPUs.
+    - Fixed a bug that caused slow or stuttering frame rates in applications
+      that use GLX_EXT_swap_control_tear while G-SYNC is active.
+    - Added support for the following GPU: Quadro P5200
+    - Fixed a bug in the NVIDIA VDPAU driver that caused
+      VdpVideoSurfaceGetBitsYCbCr() of H.265/HEVC content to have interlaced
+      artifacts.
+    - Fixed a bug that caused the X driver to not correctly report the
+      "BlendOrder" MetaMode token when querying the MetaMode through, e.g.,
+      `nvidia-settings --query CurrentMetaMode`.
+    - Fixed a bug that prevented nvidia-installer from displaying a
+      targeted error message when optional kernel modules fail to load.
+
+ -- Luca Boccassi <bluca@debian.org>  Thu, 21 Sep 2017 20:58:01 +0100
+
 nvidia-graphics-drivers (384.69-1) experimental; urgency=medium
 
   * New upstream long lived branch release 384.69 (2017-08-22).
