--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,7 @@ nvidia-graphics-drivers (384.90-1~svn1) UNRELEASED; urgency=medium
       targeted error message when optional kernel modules fail to load.
   * Refresh man-fixes-nvidia-smi.patch.
   * Update nv-readme.ids.
+  * Update symbols files.
 
  -- Luca Boccassi <bluca@debian.org>  Thu, 21 Sep 2017 20:58:01 +0100
 
