--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (375.82-5) UNRELEASED; urgency=medium
+
+  * Use Priority: optional for transitional packages.
+
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 03 Oct 2017 04:29:42 +0200
+
 nvidia-graphics-drivers (375.82-4) unstable; urgency=medium
 
   * Prevent mixing libgl1-nvidia-glx with libgl1-nvidia-glvnd-glx.
