--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,5 @@
 nvidia-graphics-drivers (304.137-1~svn4deb7wheezy) UNRELEASED; urgency=medium
 
-  * New upstream legacy 304xx branch release 304.137 (2017-09-19).
-
   [ Andreas Beckmann ]
   * Drop substitution backward-compatibility with EoL
     nvidia-graphics-drivers-legacy-173xx and
@@ -86,7 +84,14 @@ nvidia-graphics-drivers (304.137-1~svn4deb7wheezy) UNRELEASED; urgency=medium
   [ Russ Allbery ]
   * Remove myself from Uploaders.
 
- -- Andreas Beckmann <anbe@debian.org>  Thu, 15 Dec 2016 02:42:52 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Sun, 08 Oct 2017 22:04:28 +0200
+
+nvidia-graphics-drivers (304.137-1) UNRELEASED; urgency=medium
+
+  * New upstream legacy 304xx branch release 304.137 (2017-09-19).
+    - Improved compatibility with recent Linux kernels.
+
+ -- Andreas Beckmann <anbe@debian.org>  Sun, 08 Oct 2017 21:52:50 +0200
 
 nvidia-graphics-drivers (304.135-1) UNRELEASED; urgency=medium
 
