--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (375.82-5) UNRELEASED; urgency=medium
 
   * Use Priority: optional for transitional packages.
+  * bug-control: Report status of libglvnd packages.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 03 Oct 2017 04:29:42 +0200
 
