bug-control: report-with needs arch qualification for M-A:same packages
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304@7516 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -60,6 +60,7 @@ nvidia-graphics-drivers (304.137-1~svn4deb7wheezy) UNRELEASED; urgency=medium
   * Bump Standards-Version to 3.9.8. No changes needed.
   * Update lintian overrides.
   * build-module-packages.sh: Order kernels by descending version (375.82-2).
+  * bug-control: report-with needs arch qualification for M-A:same packages.
 
   [ Luca Boccassi ]
   * Switch to my debian.org email address in Uploaders.
