--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,12 @@
 nvidia-graphics-drivers (375.82-5) UNRELEASED; urgency=medium
 
+  [ Andreas Beckmann ]
   * Use Priority: optional for transitional packages.
   * bug-control: Report status of libglvnd packages.
+
+  [ Luca Boccassi ]
+  * Add nvidia-drm-crtc.patch to fix nvidia-drm kernel module build failure
+    for Linux 4.14. (Closes: #878160)
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 03 Oct 2017 04:29:42 +0200
 
