--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,5 @@
 nvidia-graphics-drivers (340.104-1~svn4deb8jessie) UNRELEASED; urgency=medium
 
-  * New upstream legacy 340xx branch release 340.104 (2017-09-19).
-
   [ Andreas Beckmann ]
   * build-module-packages.sh: Order kernels by descending version (375.82-2).
   * Switch watch URL from ftp:// to https:// (375.82-1).
@@ -22,7 +20,14 @@ nvidia-graphics-drivers (340.104-1~svn4deb8jessie) UNRELEASED; urgency=medium
   [ Russ Allbery ]
   * Remove myself from Uploaders.
 
- -- Andreas Beckmann <anbe@debian.org>  Fri, 30 Jun 2017 00:14:42 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 11 Oct 2017 03:05:24 +0200
+
+nvidia-graphics-drivers (340.104-1) UNRELEASED; urgency=medium
+
+  * New upstream legacy 340xx branch release 340.104 (2017-09-19).
+    * Improved compatibility with recent Linux kernels.
+
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 11 Oct 2017 03:02:32 +0200
 
 nvidia-graphics-drivers (340.102-1) jessie; urgency=medium
 
