--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (375.82-5) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (375.82-5) unstable; urgency=medium
 
   [ Andreas Beckmann ]
   * Use Priority: optional for transitional packages.
@@ -11,7 +11,7 @@ nvidia-graphics-drivers (375.82-5) UNRELEASED; urgency=medium
   * Add nvidia-drm-crtc.patch to fix nvidia-drm kernel module build failure
     for Linux 4.14. (Closes: #878160)
 
- -- Andreas Beckmann <anbe@debian.org>  Tue, 03 Oct 2017 04:29:42 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 11 Oct 2017 21:18:39 +0200
 
 nvidia-graphics-drivers (375.82-4) unstable; urgency=medium
 
